--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "temp-smp",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Measure + analyse the speed of your webpack loaders and plugins",
   "repository": "aJean/temp-smp",
   "main": "index.js",
@@ -18,9 +18,7 @@
     "alex": "^9.1.0",
     "all-contributors-cli": "^6.19.0",
     "prettier": "^2.2.1",
-    "write-good": "^1.0.2"
-  },
-  "dependencies": {
+    "write-good": "^1.0.2",
     "chalk": "^4.1.0",
     "standard-version": "^9.3.1"
   },
